Annual Plan document - change after new pattern provided

--- a/Hoof/Views/GameHuntPlan/Plan.cshtml
+++ b/Hoof/Views/GameHuntPlan/Plan.cshtml
@@ -91,7 +91,7 @@
             @Html.DropDownList("Wybierz zwierzynę", new List<SelectListItem>
             {
                 new SelectListItem {Text = "Łoś", Value = "1"},
-                new SelectListItem {Text = "Jeleń", Value = "2"},
+                new SelectListItem {Text = "Jeleń Szlachetny", Value = "2"},
                 new SelectListItem {Text = "Jeleń Sika", Value = "3"},
                 new SelectListItem {Text = "Daniel", Value = "4"},
                 new SelectListItem {Text = "Sarna", Value = "5"},
