--- a/Hoof/Views/AnnualPlan/Plan.cshtml
+++ b/Hoof/Views/AnnualPlan/Plan.cshtml
@@ -9,14 +9,13 @@
 @section scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
-
+    @Scripts.Render("~/Scripts/pdfmake.min.js")
+    @Scripts.Render("~/Scripts/vfs_fonts.js")
     <link rel="stylesheet" href="~/Content/AnnualPlan/AnnualPlanStyles.css" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.51/pdfmake.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.51/vfs_fonts.js"></script>
     <script type="text/javascript" src="~/Scripts/AnnualPlan/AnnualPlanPdfGenerator.js"></script>
     <script type="text/javascript">
 
-        //$('#bodyContainer').css('width', '75%');
+        $('#bodyContainer').css('width', '75%');
 
         $(document).ready(function() {
             $('#bigGameTable tr').each(function() {
@@ -49,10 +48,6 @@
                 MarketingYear: '@Model.CurrentMarketingYearModel.ToString()',
                 StartYear: @Model.CurrentMarketingYearModel.Start.Year
             };
-            config.PreviousMarketingYearModel = {
-                Id: @Model.PreviousMarketingYearModel.Id,
-                MarketingYear: '@Model.PreviousMarketingYearModel.ToString()'
-            };
             var annualPlanGenerator = new AnnualPlanGenerator(config);
         });
 
@@ -65,42 +60,19 @@
 
 <br />
 
-<h3 style="font-weight: bold">I. Dane ogólne</h3>
-<h4>1. Obwód łowiecki nr <b>20</b> powierzchnia <b>4777</b> ha, w tym powierzchnia gruntów leśnych <b>4394</b> ha powierzchnia po wyłączeniach, o których mowa w art. 26 ustawy z 13.X.1995r. Prawo Łowieckie <b>4502</b> ha</h4>
-<h4>2. Wojewódzctwo <b>wielkopolskie</b>, Powiat <b>złotowski</b></h4>
-<h4>3. Nadleśnictwo (nazwa i adres siedziby) <b>Płytnica z siedzibą w Nowej Szwecji, Szwecja 6 78-600 Wałcz</b></h4>
-<h4>4. Regionalna Dyrekcja Lasów Państwowych (nazwa i adres siedziby) <b>Piła, 64-920 Piła-Kalina</b></h4>
-<h4>5. Zarząd Okręgowy PZŁ (nazwa i adres siedziby) <b>Piła, al.Powstańców Wlkp. 190 64-920 Piła</b></h4>
-<h4>6. Dzierżawca/lub zarządca (nazwa i adres siedziby) <b>Koło Łowieckie nr 39 Literatów Polskich „Pióro” ul.Rostworowskego 6/2, 01-496 Warszawa</b></h4>
-<h4>7. Data sporządzenia rocznego planu łowieckiego: <b>@DateTime.Today.ToString("dd/MM/yyyy")</b></h4>
-<h4>8. Osoba uprawniona do reprezentowania dzierżawcy albo zarządcy obwodu łowieckiego (imię, nazwisko) Filip Mrotek</h4>
-<h4 style="margin-bottom: 0; margin-top: 20px">9. .............................................................................................................................................................................................................................</h4>
-<div style="text-align: center"><h7><sup>(podpis osoby uprawnionej do reprezentacji dzierżawcy albo zarządcy obwodu łowieckiego)</sup></h7></div>
-
-<br />
-<br />
-
-<div style="text-align: right; padding-right: 25%">
-    <h4>Plan zatwierdził</h4>
-</div>
-<div style="text-align: right; padding-right: 18%">
-    <h4 style="margin-bottom: 0; margin-top: 20px">..........................................................</h4>
-</div>
-<div style="text-align: right; padding-right: 28%">
-    <div><h7><sup>(data, podpis)</sup></h7></div>
-</div>
+<h4 style="text-align: center; font-weight: bold">Obwód łowiecki nr 20</h4>
 
 <br />
 
-<h3 style="font-weight: bold">II. Zagospodarowanie obwodu łowieckiego, szkody łowieckie</h3>
+<h3 style="font-weight: bold">I. Dane dotyczące zagospodarowania obwodu łowieckiego oraz szkód łowieckich</h3>
 <table class="table-bordered table-hover annualPlanTable" id="annualPlanTable">
     <tr>
         <th style="width: 35%">@Text.Specification</th>
         <th style="width: 5%" class="unit">@Text.Unit</th>
-        <th style="width: 15%" class="long-header">@String.Format(Text.PreviousEconomyPlan, Model.PreviousMarketingYearModel)</th>
-        <th style="width: 15%" class="long-header">@String.Format(Text.PreviousPlanExecution, Model.PreviousMarketingYearModel)</th>
-        <th style="width: 15%" class="long-header">@String.Format(Text.March10Condition, Model.CurrentMarketingYearModel.Start.Year)</th>
-        <th style="width: 15%" class="long-header">@String.Format(Text.CurrentYearPlan, Model.CurrentMarketingYearModel)</th>
+        <th style="width: 15%" class="long-header">@Text.PreviousEconomyPlan</th>
+        <th style="width: 15%" class="long-header">@Text.PreviousPlanExecution</th>
+        <th style="width: 15%" class="long-header">@Text.March10Condition</th>
+        <th style="width: 15%" class="long-header">@Text.CurrentYearPlan</th>
     </tr>
     <tr>
         <td class="column_number" style="text-align: center">1</td>
@@ -312,7 +284,7 @@
 <br />
 <br />
 
-<h3 style="font-weight: bold">IV. Dane dotyczące zwierząt łownych w obwodzie łowieckim.</h3>
+<h3 style="font-weight: bold">II. Dane dotyczące zwierząt łownych w obwodzie łowieckim.</h3>
 <h4 style="font-weight: bold">a) zwierzyna gruba</h4>
 <table class="table-bordered table-hover annualPlanTable" style="text-align: center" id="bigGameTable">
     <tr>
@@ -333,8 +305,8 @@
         <td class="game-unit" rowspan="2">ogółem szt.</td>
         <td class="game-unit" rowspan="2">odstrzał szt.</td>
         <td class="game-unit" rowspan="2">odłów szt.</td>
-        <td class="game-unit" rowspan="2">ogółem.</td>
-        <td class="game-unit" rowspan="2">w tym odstrzał sanitarny.</td>
+        <td class="game-unit" rowspan="2">ogółem</td>
+        <td class="game-unit" rowspan="2">w tym odstrzał sanitarny</td>
         <td class="game-unit" rowspan="2">szt.</td>
         <td class="game-unit" rowspan="2">szt.</td>
         <td class="game-unit" rowspan="2">szt.</td>
@@ -444,7 +416,7 @@
 <br />
 <br />
 
-<h4 style="font-weight: bold">b) zwierzyna drobna.</h4>
+<h4 style="font-weight: bold">b) zwierzyna drobna</h4>
 <table class="table-bordered table-hover annualPlanTable" style="text-align: center" id="smallGameTable">
     <tr>
         <th class="medium-header" rowspan="3">@Text.GameTypes</th>
