Added Fodder functionality and included it in Annual Plan and Monthly Report

--- a/Hoof/Views/AnnualPlan/Plan.cshtml
+++ b/Hoof/Views/AnnualPlan/Plan.cshtml
@@ -196,34 +196,34 @@
     <tr>
         <td>a) @Text.Dry</td>
         <td>@Text.UnitTon</td>
-        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Dry</td>
+        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Dry.Plan</td>
+        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Dry.Execution</td>
         <td></td>
-        <td></td>
-        <td>@Model.CurrentAnnualPlanModel.FodderPlanModel.Dry</td>
+        <td>@Model.CurrentAnnualPlanModel.FodderPlanModel.Dry.Plan</td>
     </tr>
     <tr>
         <td>b) @Text.Juicy</td>
         <td>@Text.UnitTon</td>
-        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Juicy</td>
+        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Juicy.Plan</td>
+        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Juicy.Execution</td>
         <td></td>
-        <td></td>
-        <td>@Model.CurrentAnnualPlanModel.FodderPlanModel.Juicy</td>
+        <td>@Model.CurrentAnnualPlanModel.FodderPlanModel.Juicy.Plan</td>
     </tr>
     <tr>
         <td>c) @Text.Pithy</td>
         <td>@Text.UnitTon</td>
-        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Pithy</td>
+        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Pithy.Plan</td>
+        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Pithy.Execution</td>
         <td></td>
-        <td></td>
-        <td>@Model.CurrentAnnualPlanModel.FodderPlanModel.Pithy</td>
+        <td>@Model.CurrentAnnualPlanModel.FodderPlanModel.Pithy.Plan</td>
     </tr>
     <tr>
         <td>d) @Text.Salt</td>
         <td>@Text.UnitTon</td>
-        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Salt</td>
+        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Salt.Plan</td>
+        <td>@Model.PreviousAnnualPlanModel.FodderPlanModel.Salt.Execution</td>
         <td></td>
-        <td></td>
-        <td>@Model.CurrentAnnualPlanModel.FodderPlanModel.Salt</td>
+        <td>@Model.CurrentAnnualPlanModel.FodderPlanModel.Salt.Plan</td>
     </tr>
     <tr>
         <td class="paragraph">8. @Text.DamagedArea</td>
