--- a/Hoof/Views/Report/MonthlyReport.cshtml
+++ b/Hoof/Views/Report/MonthlyReport.cshtml
@@ -123,22 +123,22 @@
     <tr>
         <td rowspan="4" colspan="3">W obwodzie wyłożono następujące ilośći karmy:</td>
         <td colspan="3" style="text-align: left">objętościowej suchej</td>
-        <td colspan="1"></td>
+        <td colspan="1">@Model.MonthlyReportFodderModel.Dry.PutOut</td>
         <td colspan="1">kg</td>
     </tr>
     <tr>
         <td colspan="3" style="text-align: left">objętościowej soczystej</td>
-        <td colspan="1"></td>
+        <td colspan="1">@Model.MonthlyReportFodderModel.Juicy.PutOut</td>
         <td colspan="1">kg</td>
     </tr>
     <tr>
         <td colspan="3" style="text-align: left">treściwej</td>
-        <td colspan="1"></td>
+        <td colspan="1">@Model.MonthlyReportFodderModel.Pithy.PutOut</td>
         <td colspan="1">kg</td>
     </tr>
     <tr>
         <td colspan="3" style="text-align: left">soli</td>
-        <td colspan="1"></td>
+        <td colspan="1">@Model.MonthlyReportFodderModel.Salt.PutOut</td>
         <td colspan="1">kg</td>
     </tr>
 </table>
